tests/bad/match_not_enum.ae
/// fail: Match expression must be enum/integer/char

def main() {
    match "hello" {

    }
}